--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     align-items: center;
     z-index: 99;
     backdrop-filter: blur(20px);
+    background: rgba(22, 41, 56, 0.2);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
@@ -98,10 +99,10 @@ header {
     position: relative;
     width: 400px;
     height: 440px;
-    background: transparent;
+    background: rgba(255, 255, 255, 0.2);
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
-    backdrop-filter: blur(20px); /* размытие */
+    backdrop-filter: blur(10px); /* размытие */
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
