--- a/style.css
+++ b/style.css
@@ -7,14 +7,20 @@
     font-family: 'Poppins', sans-serif;
 }
 
+:root {
+    --color-form: #000235;
+    --color-text: #fff;
+}
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 100vw;
     min-height: 100vh;
     
     /* Задний фон */
-    background: url('nigthForest.png') no-repeat;
+    background: url('nightForest1.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -26,7 +32,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 1.5rem 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,23 +42,42 @@ header {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
+.mainNavigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+}
+
 /* Логотип */
 
 .logo {
-    font-size: 2em;
-    color: #fff;
+    font-size: 2rem;
+    color: var(--color-text);
     user-select: none;
+}
+
+/* Меню */
+
+.icon-menu {
+    display: none;
 }
 
 /* Навигация */
 
+.navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .navigation a {
     position: relative;
-    font-size: 1.1em;
-    color: #fff;
+    font-size: 1.1rem;
+    color: var(--color-text);
     text-decoration: none;
     font-weight: 500;
-    margin-left: 40px;
+    margin-left: 2rem;
 }
 
 /* Реакция в навигации */
@@ -61,11 +86,11 @@ header {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -6px;
+    bottom: -.3rem;
     width: 100%;
-    height: 3px;
-    background: #fff;
-    border-radius: 5px;
+    height: .2rem;
+    background: var(--color-text);
+    border-radius: .4rem;
     transform-origin: right;
     transform: scaleX(0);
     transition: transform 0.5s;
@@ -78,32 +103,38 @@ header {
 
 /* Кнопка в навигации */
 
-.navigation .btnLogin-popup {
-    width: 130px;
-    height: 50px;
+header .btnLogin-popup {
+    width: 8rem;
+    height: 3rem;
     background: transparent;
-    border: 2px solid #fff;
+    border: .1rem solid var(--color-text);
     outline: none;
-    border-radius: 6px;
+    border-radius: .4rem;
     cursor: pointer;
-    font-size: 1.1em;
-    color: #fff;
-    font-weight: 500;
-    margin-left: 40px;
+    font-size: 1.1rem;
+    color: var(--color-text);
+    font-weight: 700;
+    margin-left: 2.5rem;
     transition: 0.5s;
+}
+
+header .btnLogin-popup:hover {
+    background: rgba(285, 285, 285, .5);
+    color: var(--color-form);
 }
 
 /********** Стиль окна логина/регистации **********/
 
 .wrapper {
     position: relative;
-    width: 400px;
-    height: 440px;
+    margin: 7rem 1rem;
+    max-width: 23rem;
+    height: 25rem;
     background: rgba(255, 255, 255, 0.2);
     border: 2px solid rgba(255, 255, 255, 0.5);
-    border-radius: 20px;
+    border-radius: 1.5rem;
     backdrop-filter: blur(10px); /* размытие */
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -121,14 +152,14 @@ header {
 /* Для расширения окна логина под регистрацию через JavaScript */
 
 .wrapper.active {
-    height: 520px;
+    height: 27rem;
 }
 
 /* Общие расположение внутри окна */
 
 .wrapper .form-box {
     width: 100%;
-    padding: 40px;
+    padding: 2.5rem;
 }
 
 /* Скрытие окна Логин */
@@ -142,7 +173,7 @@ header {
 
 .wrapper.active .form-box.login {
     transition: none;
-    transform: translateX(-400px);
+    transform: translateX(-25rem);
 }
 
 /* Смещение регистрации от окна логина вправо */
@@ -150,7 +181,7 @@ header {
 .wrapper .form-box.register {
     position: absolute;
     transform: none;
-    transform: translateX(400px);
+    transform: translateX(25em);
 }
 
 /* Смещение регистрации в окно логина */
@@ -168,15 +199,15 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    width: 45px;
-    height: 45px;
-    background: #162938;
-    font-size: 2em;
-    color: #fff;
+    width: 3rem;
+    height: 3rem;
+    background: var(--color-form);
+    font-size: 2rem;
+    color: var(--color-text);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom-left-radius: 20px;
+    border-bottom-left-radius: 1.5rem;
     cursor: pointer;
     z-index: 1;
 }
@@ -184,8 +215,8 @@ header {
 /* Стиль надписи "Логин" */
 
 .form-box h2 {
-    font-size: 2em;
-    color: #162938;
+    font-size: 2rem;
+    color: var(--color-form);
     text-align: center;
 }
 
@@ -194,9 +225,9 @@ header {
 .input-box {
     position: relative;
     width: 100%;
-    height: 50px;
-    border-bottom: 2px solid #162938;
-    margin: 30px 0;
+    height: 2.5rem;
+    border-bottom: .1em solid var(--color-form);
+    margin: 1rem 0;
 }
 
 /* Стиль надписи почты и пароля и его расположение */
@@ -204,10 +235,10 @@ header {
 .input-box label {
     position: absolute;
     top: 50%;
-    left: 5px;
+    left: .3rem;
     transform: translateY(-50%);
-    font-size: 1em;
-    color: #162938;
+    font-size: 1rem;
+    color: var(--color-form);
     font-weight: 500;
     pointer-events: none;
     transition: 0.5s;
@@ -217,7 +248,7 @@ header {
 
 .input-box input:focus~label,
 .input-box input:valid~label {
-    top: -5px;
+    top: -1px;
 }
 
 /* Стиль текстового поля почты и пароля */
@@ -228,29 +259,28 @@ header {
     background: transparent;
     border: none;
     outline: none;
-    font-size: 1em;
-    color: #162938;
+    font-size: 1rem;
+    color: var(--color-form);
     font-weight: 600;
-    padding: 0 35px 0 5px;
 }
 
 /* Стиль иконок и их расположение */
 
 .input-box .icon {
     position: absolute;
-    right: 8px;
-    font-size: 1.2em;
-    color: #162938;
-    line-height: 57px;
+    right: .5rem;
+    font-size: 1.2rem;
+    color: var(--color-form);
+    line-height: 3rem;
 }
 
 /* Стиль и расположение текста с запомнить и забыли пароль */
 
 .remember-forgot {
-    font-size: 0.9em;
-    color: #162938;
+    font-size: 0.9rem;
+    color: var(--color-form);
     font-weight: 500;
-    margin: -15px 0 15px;
+    margin: 1rem 0 1rem;
     display: flex;
     justify-content: space-between;
 }
@@ -258,14 +288,14 @@ header {
 /* Стиль флажка */
 
 .remember-forgot label input {
-    accent-color: #162938;
-    margin-right: 3px;
+    accent-color: var(--color-form);
+    margin-right: 0.3rem;
 }
 
 /* Стиль текста ссылки "забыли пароль?" */
 
 .remember-forgot a {
-    color: #162938;
+    color: var(--color-form);
     text-decoration: none;
 }
 
@@ -275,18 +305,18 @@ header {
     text-decoration: underline;
 }
 
-/* Стиль кнопки "Логин" */
+/* Стиль кнопки "Войти" и "Создать аккаунт" */
 
 .btn {
     width: 100%;
-    height: 45px;
-    background: #162938;
+    height: 3em;
+    background: var(--color-form);
     border: none;
     outline: none;
-    border-radius: 6px;
+    border-radius: .3rem;
     cursor: pointer;
-    font-size: 1em;
-    color: #fff;
+    font-size: 1rem;
+    color: var(--color-text);
     font-weight: 500;
 }
 
@@ -294,16 +324,16 @@ header {
 
 .login-register {
     font-size: 0.9em;
-    color: #162938;
+    color: var(--color-form);
     text-align: center;
     font-weight: 500;
-    margin: 25px 0 10px;
+    margin: 1.5em 0 0;
 }
 
 /* Стиль ссылки о регистрации */
 
 .login-register p a {
-    color: #162938;
+    color: var(--color-form);
     text-decoration: none;
     font-weight: 600;
 }
@@ -312,4 +342,57 @@ header {
 
 .login-register p a:hover {
     text-decoration: underline;
+}
+
+@media(max-width: 820px) {
+    .mainNavigation {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navigation {
+        flex-direction: column;
+        padding: 1rem 0 2rem 0;
+        position: absolute;
+        top: -15rem;
+        left: 0;
+        width: 100%;
+        transition: 0.8s;
+        background: rgba(66, 129, 162, 0.5);;
+        backdrop-filter: blur(20px);
+    }
+
+    .navigation a {
+        display: block;
+        padding-top: 1rem;
+    }
+
+    .navigation.slide {
+        top: 100%;
+    }
+
+    .icon-menu {
+        position: relative;
+        font-size: 2rem;
+        color: var(--color-text);
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        opacity: 1;
+        cursor: pointer;
+        margin-left: 1rem;
+    }
+    
+    header .btnLogin-popup {
+        margin-left: 0.5em;
+    }
+}
+
+@media(max-width: 415px) {
+    .header {
+        padding: .75rem 1.5rem;
+    }
 }
